[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
name = "rs-router"
version = "0.1.1"
keywords = ["hyper", "router", "regexset"]
description = "A RegexSet based path router for Hyper"
repository = "https://github.com/kardeiz/rs-router"
license = "MIT"

[dependencies]
hyper = "0.10"
log = "0.3.6"
quick-error = "1.1.0"
regex = "0.2"

[dev-dependencies]
lazy_static = "0.2.1"
num_cpus = "1.1.0"
