[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
description = "A RegexSet based path router for Hyper"
keywords = ["hyper", "router", "regexset"]
license = "MIT"
name = "rs-router"
repository = "https://github.com/kardeiz/rs-router"
version = "0.1.1"

[dependencies]
error-chain = "0.10.0"
hyper = "0.10.10"
log = "0.3.6"
regex = "0.2"

[dependencies.conduit-mime-types]
optional = true
version = "0.7.3"

[dependencies.lazy_static]
optional = true
version = "0.2.1"

[dev-dependencies]
bytes = "0.4.3"
lazy_static = "0.2.1"
num_cpus = "1.1.0"

[features]
default = ["extensions"]
extensions = ["lazy_static", "conduit-mime-types"]
